--- a/fly.toml
+++ b/fly.toml
@@ -9,8 +9,11 @@ internal_port = 8_080
 min_machines_running = 0
 processes = [ "app" ]
 
-[[vm]]
+[vm]
 cpu_kind = "shared"
 cpus = 1
 memory = "1gb"
 memory_mb = 1_024
+
+[build]
+  image = "flyio/hellofly:latest"
